<resources>
    <string name="app_name">Habit Alarm</string>
    <string name="everyday">EVERYDAY</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>

    <string name="settings">SETTINGS</string>
    <string name="create">CREATE</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>

    <string name="dialog_delete_message">The habit will be deleted permanently.</string>

    <string name="notification_content">Don\'t forget to check out your habit today!</string>
    <string name="notification_channel_description">Habit Alarm notification</string>

    <string name="settings_header_appearance">Theme</string>
    <string name="dark_theme_key">dark_theme</string>
    <string name="dark_theme_title">Dark Theme</string>

    <string name="settings_header_notification">Reminder</string>
    <string name="notification_key">notification</string>
    <string name="notification_title">Notification</string>
    <string name="notification_summary">Set notification settings like sound, light, etc</string>

</resources>